# book-review-backend

./: .env  .env.example  .gitignore  README.md  README_TEST_DB.md  alembic.ini  check_books.py  docker-compose.yml  init_books.sql  init_db.sql  nohup.out  progress.md  pyproject.toml  pytest.ini  start_server.sh  test_sort.py  update_auth_paths.py
alembic/: env.py
alembic/versions/: 005019b6ed22_add_book_description.py  12edb603d2ec_initial.py
app/: main.py
app/api/: auth.py  auth.py.bak  book.py  profile.py  recommendation.py  review.py  storage.py
app/core/: auth.py  config.py  storage.py
app/db/: models.py  session.py
deployment/: BEGINNER_GUIDE.md  cleanup_and_setup.sh  config_py_fixed.py  fix_config_imports.sh  fix_python37_deps.sh  install.md  install_dependencies.sh  main.tf  setup_app.sh  setup_postgresql.sh  simple_setup.sh  variables.tf
docs/: auth_api.md  review_api.md
scripts/: create_database.py  create_test_database.py  fix_book_data.py  populate_books.py
specs/: prompts.txt
tasks/: 001_DB_SETUP.md  002_AUTH_SERVICE.md  003_BOOK_SERVICE.md  004_REVIEW_SERVICE.md  005_STORAGE_SERVICE.md  006_PROFILE_SERVICE.md  007_RECOMMEND_SERVICE.md  008_ERROR_LOGGING.md  009_API_TESTING.md  010_DEPLOYMENT.md  013_FE_BOOK_BROWSE.md  015_FE_PROFILE.md
tests/: conftest.py  test_auth.py  test_auth_logout.py  test_basic_db.py  test_book.py  test_db.py  test_db_connection.py  test_db_debug.py  test_db_direct.py  test_list_books.py  test_profile.py  test_recommendation.py  test_recommendation.py.bak  test_review.py  test_storage.py  test_utils.py
(+40 files in other folders)
